// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check no unintended changes have been made to rendered component 1`] = `
<form
  className="add-med-form"
  onSubmit={[Function]}
>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Name: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="med_name"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Start Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="start_date"
      onChange={[Function]}
      required={true}
      type="date"
      value=""
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      End Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="end_date"
      onChange={[Function]}
      required={true}
      type="date"
      value=""
    />
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value=""
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value={null}
      />
    </div>
    <svg
      className="time-to-take-button"
      data-testid="add-time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.5 6h-5.5v-5.5c0-0.276-0.224-0.5-0.5-0.5h-3c-0.276 0-0.5 0.224-0.5 0.5v5.5h-5.5c-0.276 0-0.5 0.224-0.5 0.5v3c0 0.276 0.224 0.5 0.5 0.5h5.5v5.5c0 0.276 0.224 0.5 0.5 0.5h3c0.276 0 0.5-0.224 0.5-0.5v-5.5h5.5c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5z"
      />
    </svg>
  </div>
  <div
    className="add-med-input font-small"
  >
    <input
      className="hidden-submit-button font-small"
      type="submit"
      value=""
    />
  </div>
</form>
`;

exports[`check no unintended changes have been made to rendered component 2`] = `
<form
  className="add-med-form"
  onSubmit={[Function]}
>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Name: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="med_name"
      onChange={[Function]}
      required={true}
      type="text"
      value="abc"
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Start Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="start_date"
      onChange={[Function]}
      required={true}
      type="date"
      value="2021-10-20"
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      End Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="end_date"
      onChange={[Function]}
      required={true}
      type="date"
      value="2021-10-30"
    />
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="12:34"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="2"
      />
    </div>
    <svg
      className="time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 6.5v3c0 0.276 0.224 0.5 0.5 0.5h15c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5h-15c-0.276 0-0.5 0.224-0.5 0.5z"
      />
    </svg>
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="01:00"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="1"
      />
    </div>
    <svg
      className="time-to-take-button"
      data-testid="add-time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.5 6h-5.5v-5.5c0-0.276-0.224-0.5-0.5-0.5h-3c-0.276 0-0.5 0.224-0.5 0.5v5.5h-5.5c-0.276 0-0.5 0.224-0.5 0.5v3c0 0.276 0.224 0.5 0.5 0.5h5.5v5.5c0 0.276 0.224 0.5 0.5 0.5h3c0.276 0 0.5-0.224 0.5-0.5v-5.5h5.5c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5z"
      />
    </svg>
  </div>
  <div
    className="add-med-input font-small"
  >
    <input
      className="hidden-submit-button font-small"
      type="submit"
      value="Add medication"
    />
  </div>
</form>
`;

exports[`check no unintended changes have been made to rendered component 3`] = `
<form
  className="add-med-form"
  onSubmit={[Function]}
>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Name: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="med_name"
      onChange={[Function]}
      required={true}
      type="text"
      value="2hwqlkmgtnqpewjirn"
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      Start Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="start_date"
      onChange={[Function]}
      required={true}
      type="date"
      value="2021-11-20"
    />
  </div>
  <div
    className="add-med-input font-small undefined"
  >
    <label
      className="left-padding"
    >
      End Date: 
    </label>
    <input
      className="hidden-text-box left-padding font-small"
      name="end_date"
      onChange={[Function]}
      required={true}
      type="date"
      value="2021-11-29"
    />
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="12:34"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="1"
      />
    </div>
    <svg
      className="time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 6.5v3c0 0.276 0.224 0.5 0.5 0.5h15c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5h-15c-0.276 0-0.5 0.224-0.5 0.5z"
      />
    </svg>
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="03:00"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="2"
      />
    </div>
    <svg
      className="time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 6.5v3c0 0.276 0.224 0.5 0.5 0.5h15c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5h-15c-0.276 0-0.5 0.224-0.5 0.5z"
      />
    </svg>
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="04:00"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="3"
      />
    </div>
    <svg
      className="time-to-take-button"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 6.5v3c0 0.276 0.224 0.5 0.5 0.5h15c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5h-15c-0.276 0-0.5 0.224-0.5 0.5z"
      />
    </svg>
  </div>
  <div
    className="med-list-time-to-take-quantity-group"
  >
    <div
      className="add-med-input font-small undefined"
    >
      <label
        className="left-padding"
      >
        Time To Take: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="time_to_take"
        onChange={[Function]}
        required={true}
        type="time"
        value="05:00"
      />
    </div>
    <div
      className="add-med-input font-small quantity-input"
    >
      <label
        className="left-padding"
      >
        Quantity: 
      </label>
      <input
        className="hidden-text-box left-padding font-small"
        name="quantity"
        onChange={[Function]}
        required={true}
        type="number"
        value="123"
      />
    </div>
  </div>
  <div
    className="add-med-input font-small"
  >
    <input
      className="hidden-submit-button font-small"
      type="submit"
      value="edit"
    />
  </div>
</form>
`;
